--- a/templates/main/question.html
+++ b/templates/main/question.html
@@ -8,23 +8,42 @@
     <h4>{{question.content}}</h4>
 </div>
 
+<form action="" method="post">
+    {% csrf_token %}
 <div class="row">
     <div class="col-6">
         <div class="collection">
             {% for choice in question.choice_set.all %}
-            <p>
-                <label>
-                  <input name="group1" type="radio"/>
-                  <span>{{choice.content}}</span>
-                </label>
-              </p>           
+              <div class="collection-item">
+                {% if answer %}
+                  {{choice.content}} ({{choice.answer_count}})
+                  {% if answer.choice.id == choice.id %}
+                    <i class="material-icons">check</i>
+                  {% endif %}
+                {% else %}
+                  <label>
+                    <input class="with-gap" name="choice" type="radio" value="{{choice.id}}" />
+                    <span>{{choice.content}}</span>
+                  </label>
+                {% endif %}
+              </div>
             {% endfor %}
         </div>    
     </div>
 </div>
+{% if answer %}
 <div class="row">
   <button class="btn waves-effect waves-light" type="submit" name="action">Submit
   </button>
 </div>
+{% endif %}
+<div class="row">
+    <p class="red">
+        {% for error in form.errors %}
+        {{error}}
+        {% endfor %}
+    </p>
+</div>
+</form>
 </div>
 {% endblock %}
